# evee

./: .dockerignore  .env.enc  .env.example  .gitignore  .sops.yaml  CLAUDE.md  README.md  Tiltfile  biome.json  docker-compose.prod.yml  docker-compose.yml  evee.py  lefthook.yml  pyproject.toml
.claude/: settings.json
.claude/hooks/: block-secrets.sh
.claude/rules/: commit-messages.md
.github/workflows/: ci.yml
.kamal/hooks/: pre-deploy
_python_archive/: evee.py
_python_archive/prompts/: SYSTEM.md
_python_archive/tests/: test_fetch_url.py
_python_archive/tools/: search_web.py
apps/api/: .env.enc  .env.example  .gitignore  Dockerfile  drizzle.config.ts  package.json  start.ts  tsconfig.json  vitest.config.ts
apps/web/: .env.example  Dockerfile  index.html  nginx.conf  package.json  vite.config.ts  vitest.config.ts
config/: deploy.api.yml  deploy.web.yml
docs/: README.md  documentation_standards.md  principles.md
docs/plans/: 2026-02-28-backend-skeleton-design.md  2026-02-28-backend-skeleton.md  2026-02-28-jwt-localstorage-design.md  2026-02-28-trpc-login.md  2026-03-03-evee-mvp.md  2026-03-03-tool-calling-design.md  2026-03-03-tool-calling-plan.md
docs/project/: api_spec.md  architecture.md  codebase_audit.md  database_schema.md  design_guidelines.md  requirements.md  runbook.md  tech_stack.md
docs/reference/: README.md
docs/tasks/: README.md  kanban_board.md
scripts/: coolify-tunnel.sh  decrypt-secrets.sh  setup-secrets.sh  setup-vps.sh
tests/: README.md  test_fetch_url.py
tools/: __init__.py  fetch_url.py  search_web.py
(+61 files in other folders)
