[project]
name = "evee"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.7.1",
    "duckduckgo-search>=8.1.1",
    "httpx>=0.28.1",
    "openai>=2.24.0",
    "python-dotenv>=1.2.2",
    "trafilatura>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
