[project]
name = "evee"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.11.1",
    "discord-py>=2.7.1",
    "httpx>=0.28.1",
    "openai>=2.24.0",
    "python-dotenv>=1.2.2",
    "trafilatura>=2.0.0",
    "truststore>=0.10.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "S"]
ignore = ["S603", "S607"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
